Added two new endpoints
